1.3.2 - not released yet

Bug fixes:
- [#5822] Test failure about the framework hook in 8.7


1.3.1 - released 2017-11-09

Bug fixes:
- [#5812] Db::enableFields should be able to find expired records


1.3.0 - released 2017-11-08

Features:
- [#5820] Model.getCreationDateAsUnixTimeStamp + getModificationDateAsUnixTimeStamp


1.2.0 - released 2017-11-08

Features:
- [#5804] Add Mapper.reload($model)

Bug fixes:
- [#5819] Fix fallback to default language for back-end users


1.1.1 - released 2017-04-12

Bug fixes:
- [#5791] Test failure in Tx_Oelib_Tests_Unit_Mapper_FrontEndUserTest
- [#5786] Use HTTPS for Google Maps and the geocoding
- [#5787] seminars FE editor crash with PHP 7

Changes:
- [#5789] Update the php-cs-fixer configuration
- [#5788] Change the static_info_tables requirement to a recommendation

Cleanup:
- [#5790] Clean up the code with php-cs-fixer


1.1.0 - released 2017-03-15

Bug fixes:
- [#5759] Make oelib compatible with MySQL in strict mode
- [#5767] Stop using the deprecated BasicFileUtility::getUniqueName
- [#5766] Test failure in ConfigurationProxyTest
- [#5761] Warning when using the ConfigurationProxy in unit tests
- [#5753] Misleading Exception type for missing mapper class


1.0.0 - released 2016-07-18

Features:
- [#5736] Update Emogrifier
- [#5734] Add a php-cs-fixer configuration
- [#5453] Add unit tests for XLIFF language files
- [#5654] Add ClassAliasMap file for autoloading
- [#5653] Add a configuration for PDF rendering of the manual
- [#5239] Add a composer.json

Bug fixes:
- [#5730] Fix deprecation log warnings in TYPO3 7LTS
- [#5696] Framework crashes with Redis rootline cache
- [#5691] Warning about headers already sent when running the tests
- [#5683] E-mail salutation is in German even for English BE
- [#5668] 1:n associations also load deleted models
- [#5661] Fix the static-info-tables dependency in the composer.json
- [#5411] Test failure if no FE user records are in the DB
- [#5505] Drop autoload-dev