@@ -1,6 +1,7 @@
 1.3.2 - not released yet
 
 Bug fixes:
+- [#5823] Provide null page cache in the testing framework
 - [#5822] Test failure about the framework hook in 8.7
 
 
